--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "firebase": "^7.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^5.5.0"
   },
   "scripts": {
